# OOP_task

Array/: CMakeLists.txt  main.cpp
Cone/: CMakeLists.txt  main.cpp
CyclicShift/: CMakeLists.txt  main.cpp  root.cpp  root.h
Emploee/: CMakeLists.txt  main.cpp
EmployerCalculator/: CMakeLists.txt  main.cpp
Number/: CMakeLists.txt  main.cpp
NumberAnalyzer/: CMakeLists.txt  main.cpp
Ring/: CMakeLists.txt  main.cpp
SimpsonI/: CMakeLists.txt  main.cpp
Sorting the array/: main.cpp
Tabulator/: CMakeLists.txt  main.cpp
Task11/: CMakeLists.txt  main.cpp
Task15/: CMakeLists.txt  main.cpp
TrafficLight/: CMakeLists.txt  main.cpp
Train/: CMakeLists.txt  main.cpp
Triangle/: CMakeLists.txt  main.cpp
hierarchies/: CMakeLists.txt  main.cpp
letter_positions/: CMakeLists.txt  main.cpp
operator++/: CMakeLists.txt  main.cpp
palindrome_checker/: CMakeLists.txt  main.cpp
scrt/: CMakeLists.txt  age.cpp  main.cpp  name.cpp  root.cpp  root.h
task8/: CMakeLists.txt  main.cpp
template/: CMakeLists.txt  main.cpp
